--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 body {
+  height: 90vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(252, 251, 250);
+  background-image: url("https://images.unsplash.com/photo-1592064064956-30807b590c08?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
+  background-repeat: 'no-repeat';
+  background-size: cover;
+  background-position: center;
 }
 
 code {
